--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/TPS/Maps/GameMap.GameMap
 EditorStartupMap=/Game/TPS/Maps/GameMap.GameMap
@@ -35,19 +33,12 @@ SoundCueCookQualityIndex=-1
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=True
-
 r.GenerateMeshDistanceFields=True
-
 r.DynamicGlobalIlluminationMethod=1
-
 r.ReflectionMethod=1
-
 r.Shadow.Virtual.Enable=1
-
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
@@ -85,4 +76,10 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bGenerateNavigationOnlyAroundNavigationInvokers=True
 
